spacing solved

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 }
 
 .slider-wrapper {
-    padding-bottom: 21px !important;
+    padding-bottom: 31px !important;
 }
 
 .swiper-slide {
